--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/mocha": "2.2.39",
     "chai": "3.5.0",
     "chai-spies": "0.7.1",
-    "meteor-node-stubs": "0.2.5"
+    "meteor-node-stubs": "0.2.5",
+    "meteor-typings": "^1.3.1"
   },
   "dependencies": {
     "@angular/common": "2.4.8",
@@ -30,6 +31,7 @@
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/router": "3.4.8",
     "angular2-meteor": "0.7.1",
+    "angular2-meteor-accounts-ui": "^1.0.0",
     "angular2-meteor-polyfills": "^0.1.1",
     "angular2-meteor-tests-polyfills": "0.0.2",
     "babel-runtime": "^6.18.0",
