--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
       "@app/*": ["./client/imports/app/*"],
       "@shared:models": ["./shared/models"],
       "@shared:collections": ["./shared/collections"]
-    }
+    },
+    "types": [
+      "meteor-typings"
+    ]
   },
   "exclude": [
     "node_modules"
